feat: add isAgreementWip handling and enhance UI for budget lines and agreement tabs

--- a/frontend/src/components/Agreements/DetailsTabs/DetailsTabs.module.scss
+++ b/frontend/src/components/Agreements/DetailsTabs/DetailsTabs.module.scss
@@ -27,3 +27,9 @@
     color: #565c65;
     outline: none;
 }
+
+.btnDisabled {
+    color: #ADADAD;
+    pointer-events: none;
+    cursor: not-allowed;
+}
