refactor: button styles globally
remove HeroDescription CSS module and update button styles in styles.scss

--- a/frontend/sass/uswds/styles.scss
+++ b/frontend/sass/uswds/styles.scss
@@ -219,3 +219,11 @@ $themeColors: (
 [class^="usa-date-picker__"]:not([disabled]) {
     text-align: center;
 }
+
+// BUTTONS
+button {
+    background: none;
+    border: none;
+    text-align: center;
+    padding: 0;
+}
