--- a/frontend/src/pages/budgetLines/list/BLIFilterButton.module.css
+++ b/frontend/src/pages/budgetLines/list/BLIFilterButton.module.css
@@ -1,7 +1,7 @@
 .modalBackgroundColor {
-  background: #F0F0F0;
+    background: #f0f0f0;
 }
 
 .legendColor {
-  color: #565C65;
+    color: #565c65;
 }
