--- a/frontend/sass/uswds/styles.scss
+++ b/frontend/sass/uswds/styles.scss
@@ -246,5 +246,7 @@ button {
 
 // WRAP TEXT
 .wrap-text {
-    word-break: break-word;
-    overflow-wrap: break-word;}
+    word-wrap: break-word;  
+    overflow-wrap: break-word;  
+    hyphens: auto;
+}  
