--- a/frontend/sass/uswds/styles.scss
+++ b/frontend/sass/uswds/styles.scss
@@ -61,6 +61,7 @@ html {
     --data-viz-bl-by-status-2: #336a90;
     --data-viz-bl-by-status-3: #e5a000;
     --data-viz-bl-by-status-4: #8b4687;
+    --data-viz-bl-by-status-5: #2d261a;
     --data-viz-budget-graph-1: #3a835b;
     --data-viz-budget-graph-2: #a6deb5;
     --can-total-budget-2: #1f468e;
@@ -132,6 +133,7 @@ $themeColors: (
     "data-viz-bl-by-status-2": var(--data-viz-bl-by-status-2),
     "data-viz-bl-by-status-3": var(--data-viz-bl-by-status-3),
     "data-viz-bl-by-status-4": var(--data-viz-bl-by-status-4),
+    "data-viz-bl-by-status-5": var(--data-viz-bl-by-status-5),
     "data-viz-budget-graph-1": var(--data-viz-budget-graph-1),
     "data-viz-budget-graph-2": var(--data-viz-budget-graph-2),
     "can-total-budget-2": var(--can-total-budget-2),
@@ -250,7 +252,7 @@ button {
 
 // WRAP TEXT
 .wrap-text {
-    word-wrap: break-word;  
-    overflow-wrap: break-word;  
+    word-wrap: break-word;
+    overflow-wrap: break-word;
     hyphens: auto;
-}  
+}
